--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <h1><MARquee>JAVASCRIPT TASKS</MARquee></h1><br><hr>
+<h2>Var/let/const</h2>
+<a href="./VAR.docx">diiferences of var/let/const</a>
 <h2>data types</h2>
 <a href="./DATA TYPES JAVASCRIPT.docx">Data types</a><hr>
 <h2>OPERATORS</h2>
