--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@
 <h2>conditional statements</h2>
 <a href="./CONDITIONAL STATEMENTS.docx">conditional statements</a>
 <h2>14-06-24</h2>
-<a href="./14-06-24.docx">14-06-24</a>
+<a href="./14-06-24.docx">14-06-24</a><hr>
+<h2>18-06-24</h2>
+<a href="./18-06-24.docx">18-06-24</a><hr>
