--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@
 <a href="./14-06-24.docx">14-06-24</a><hr>
 <h2>18-06-24</h2>
 <a href="./18-06-24.docx">18-06-24</a><hr>
+<h2>21-06-24</h2>
+<a href="./justy3.js">21st june task</a>
