--- a/index.html
+++ b/index.html
@@ -15,3 +15,5 @@
 <a href="./18-06-24.docx">18-06-24</a><hr>
 <h2>21-06-24</h2>
 <a href="./justy3.js">21st june task</a>
+<h2>24-06-24</h2>
+<a href="./june-24.js">24th june task</a>
