--- a/index.html
+++ b/index.html
@@ -17,3 +17,5 @@
 <a href="./justy3.js">21st june task</a>
 <h2>24-06-24</h2>
 <a href="./june-24.js">24th june task</a>
+<h2>26-06-24</h2>
+<a href="./26-06-24.docx">26th june task</a>
