--- a/index.html
+++ b/index.html
@@ -19,3 +19,5 @@
 <a href="./june-24.js">24th june task</a>
 <h2>26-06-24</h2>
 <a href="./26-06-24.docx">26th june task</a>
+<h2>02-07-24</h2>
+<a href="./july-02.js">callback function</a>
