--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <a href="./14-06-24.docx">14-06-24</a><hr>
 <h2>18-06-24</h2>
 <a href="./18-06-24.docx">18-06-24</a><hr>
+<h2>19-06-24</h2>
+<a href="./june-19.js">strings</a><hr>
 <h2>21-06-24</h2>
-<a href="./justy3.js">21st june task</a>
+<a href="./justy3.js">21st june task</a><hr>
 <h2>24-06-24</h2>
-<a href="./june-24.js">24th june task</a>
+<a href="./june-24.js">24th june task</a><hr>
 <h2>26-06-24</h2>
-<a href="./26-06-24.docx">26th june task</a>
+<a href="./26-06-24.docx">26th june task</a><hr>
 <h2>02-07-24</h2>
-<a href="./july-02.js">callback function</a>
+<a href="./july-02.js">callback function</a><hr>
