--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h2>questions on operators</h2>
 <a href="./12-06-24.docx">12-06-24</a><hr>
 <h2>conditional statements</h2>
-<a href="./CONDITIONAL STATEMENTS.docx">conditional statements</a>
+<a href="./CONDITIONAL STATEMENTS.docx">conditional statements</a><hr>
 <h2>14-06-24</h2>
 <a href="./14-06-24.docx">14-06-24</a><hr>
 <h2>18-06-24</h2>
@@ -21,5 +21,7 @@
 <a href="./june-24.js">24th june task</a><hr>
 <h2>26-06-24</h2>
 <a href="./26-06-24.docx">26th june task</a><hr>
+<h2>27-06-24</h2>
+<a href="./june-27th.js">date methods</a><hr>
 <h2>02-07-24</h2>
 <a href="./july-02.js">callback function</a><hr>
