--- a/index.html
+++ b/index.html
@@ -25,3 +25,5 @@
 <a href="./june-27th.js">date methods</a><hr>
 <h2>02-07-24</h2>
 <a href="./july-02.js">callback function</a><hr>
+<h2>03-07-24</h2>
+<a href="./JS TASK 03-07-24.docx">03-07-24</a><hr>
