--- a/index.html
+++ b/index.html
@@ -27,3 +27,7 @@
 <a href="./july-02.js">callback function</a><hr>
 <h2>03-07-24</h2>
 <a href="./JS TASK 03-07-24.docx">03-07-24</a><hr>
+<h2>08-07-24</h2>
+<a href="./july-08/FACT1.html">factoial</a><br>
+<a href="./july-08/otp.html">OTP</a><br>
+<a href="./july-08/password.html">password</a><hr>
